--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-router": "^4.4.1",
     "@types/webpack-env": "^1.13.6",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "rimraf": "^2.6.2",
     "serve": "^10.1.1",
     "ts-loader": "^5.3.1",
