--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
   },
   "dependencies": {
     "node-fetch": "^2.3.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-hot-loader": "^4.3.12",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
     "react-router": "^4.3.1",
     "react-static": "^5.9.12",
+    "react-static-plugin-sass": "^1.0.1",
     "react-static-routes": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.12",
-    "@types/react": "^16.7.13",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-router": "^4.4.1",
+    "@types/react-router": "^4.4.3",
     "@types/webpack-env": "^1.13.6",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "rimraf": "^2.6.2",
     "serve": "^10.1.1",
     "ts-loader": "^5.3.1",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.2"
   },
   "prettier": {
     "semi": false,
