--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "bloomer": "^0.6.5",
     "bulma": "^0.7.2",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
