--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx-react-devtools": "^6.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-event-listener": "^0.6.5",
     "react-hot-loader": "^4.6.3",
     "react-router": "^4.3.1",
     "react-static": "^5.9.12",
@@ -29,6 +30,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-event-listener": "^0.4.7",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-router": "^4.4.3",
     "@types/webpack-env": "^1.13.6",
