--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.7.0",
     "react-event-listener": "^0.6.5",
     "react-hot-loader": "^4.6.3",
+    "react-outside-click-handler": "^1.2.2",
     "react-router": "^4.3.1",
     "react-static": "^5.9.12",
     "react-static-plugin-sass": "^1.0.1",
@@ -32,6 +33,7 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-event-listener": "^0.4.7",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-router": "^4.4.3",
     "@types/webpack-env": "^1.13.6",
     "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
