--- a/package.json
+++ b/package.json
@@ -1,49 +1,81 @@
 {
-  "name": "kit.black",
+  "name": "@kurone-kito/kit.black",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "CC-BY-NC-4.0",
   "private": true,
+  "description": "Website of kurone-kito",
+  "keywords": [
+    "VTuber",
+    "website"
+  ],
+  "homepage": "https://github.com/kurone-kito/kit.black#readme",
+  "bugs": "https://github.com/kurone-kito/kit.black/issues",
+  "repository": "github:kurone-kito/kit.black",
+  "license": "CC-BY-NC-4.0",
+  "author": "kurone-kito <krone@kit.black> (https://kit.black/)",
+  "type": "module",
+  "files": [],
   "scripts": {
-    "start": "react-static start",
-    "stage": "react-static build --staging",
-    "build": "rimraf dist && react-static build",
-    "serve": "serve dist -p 3000",
-    "tslint": "tslint"
-  },
-  "dependencies": {
-    "bloomer": "^0.6.5",
-    "bulma": "^0.7.2",
-    "mobx": "^5.8.0",
-    "mobx-react": "^5.4.3",
-    "mobx-react-devtools": "^6.0.3",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-event-listener": "^0.6.5",
-    "react-hot-loader": "^4.6.3",
-    "react-outside-click-handler": "^1.2.2",
-    "react-router": "^4.3.1",
-    "react-static": "^5.9.12",
-    "react-static-plugin-sass": "^1.0.1",
-    "react-static-routes": "^1.0.0"
+    "clean": "rimraf -g .eslintcache \"*.tgz\" \"*.tsbuildinfo\" \"node_modules/.cache/**/*\"",
+    "lint": "pnpm run \"/^lint:.+:check/\"",
+    "lint:cspell:check": "cspell lint --no-progress --show-suggestions -u \"./**/*\"",
+    "lint:eslint:check": "eslint --cache --cache-location node_modules/.cache/eslint/ --cache-strategy=content -f codeframe \"./**/*\"",
+    "lint:eslint:fix": "pnpm run lint:eslint:check --fix",
+    "lint:fix": "pnpm run lint:cspell:check && pnpm run \"/^lint:.+:fix/\"",
+    "lint:markdown:check": "markdownlint-cli2 \"**/*.md\"",
+    "lint:markdown:fix": "markdownlint-cli2 --fix \"**/*.md\"",
+    "lint:oxlint:check": "oxlint",
+    "lint:oxlint:fix": "oxlint --fix",
+    "lint:prettier:check": "pnpm run prettier -cu",
+    "lint:prettier:fix": "pnpm run prettier -uw",
+    "lint:stylelint:check": "pnpm run stylelint",
+    "lint:stylelint:fix": "pnpm run stylelint --fix",
+    "prepare": "husky",
+    "prettier": "prettier --cache --log-level=warn \"./**/*\"",
+    "stylelint": "stylelint --aei --cache --cache-location node_modules/.cache/stylelint/ \"./**/*.css\"",
+    "test": "tsc"
   },
   "devDependencies": {
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-event-listener": "^0.4.7",
-    "@types/react-hot-loader": "^4.1.0",
-    "@types/react-outside-click-handler": "^1.2.0",
-    "@types/react-router": "^4.4.3",
-    "@types/webpack-env": "^1.13.6",
-    "convert-tsconfig-paths-to-webpack-aliases": "^0.9.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "rimraf": "^2.6.3",
-    "serve": "^10.1.1",
-    "ts-loader": "^5.3.1",
-    "tslint": "^5.12.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2"
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@cspell/cspell-types": "^8.14.4",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
+    "@kurone-kito/commitlint-config": "^0.16.1",
+    "@kurone-kito/cspell-config": "^0.16.1",
+    "@kurone-kito/eslint-config-base": "^0.16.1",
+    "@kurone-kito/lint-staged-config": "^0.16.1",
+    "@kurone-kito/markdownlint-config": "^0.16.1",
+    "@kurone-kito/prettier-config": "^0.16.1",
+    "@kurone-kito/typescript-config": "^0.16.1",
+    "@types/eslint__eslintrc": "^2.1.2",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.7.5",
+    "@typescript-eslint/parser": "^8.8.1",
+    "@typescript-eslint/utils": "^8.8.1",
+    "cspell": "^8.14.4",
+    "eslint": "^9.12.0",
+    "eslint-config-stylelint": "^22.0.0",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "markdownlint-cli2": "^0.14.0",
+    "oxlint": "^0.9.9",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier-plugin-sh": "^0.14.0",
+    "prettier-plugin-sort-json": "^4.0.0",
+    "rimraf": "^6.0.1",
+    "stylelint": "^16.9.0",
+    "stylelint-config-standard": "^36.0.1",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.8.1",
+    "typescript-eslint-language-service": "^5.0.5"
+  },
+  "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
+  "engines": {
+    "node": ">=22"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
