feat(ALL): added the empty entrypoint

--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,node,vim,visualstudiocode,windows
+
+### THE PROJECT SPECIFIES #################################################
+
+### Node ###
+# JSON
+packages/web/src/*.json
