--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lint:prettier:fix": "pnpm run prettier -uw",
     "lint:stylelint:check": "pnpm run stylelint",
     "lint:stylelint:fix": "pnpm run stylelint --fix",
+    "pnpm:devPreinstall": "pnpm dlx mkdirp packages/fetcher/dist && pnpm dlx shx head -n 1 packages/fetcher/src/bin.mts > packages/fetcher/dist/bin.mjs",
     "prepare": "husky",
     "prettier": "prettier --cache --log-level=warn \"./**/*\"",
     "prestart": "pnpm run prebuild",
