--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -13,7 +13,22 @@
   "license": "MIT",
   "author": "kurone-kito <krone@kit.black> (https://kit.black/)",
   "type": "module",
-  "files": [],
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.mts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "clean": "rimraf -g \"*.tgz\" \"*.tsbuildinfo\" dist node_modules/.cache",
+    "start": "tsc -w",
+    "test": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@kurone-kito/typescript-config": "^0.16.1",
+    "rimraf": "^6.0.1",
+    "typescript": "~5.6.2"
+  },
   "engines": {
     "node": ">=22"
   },
