--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "prestart": "pnpm run prebuild",
     "start": "pnpm run --parallel -r start",
     "stylelint": "stylelint --aei --cache --cache-location node_modules/.cache/stylelint/ \"./**/*.css\"",
-    "test": "pnpm run -r test"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -82,7 +82,8 @@
     "touch": "^3.1.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.8.1",
-    "typescript-eslint-language-service": "^5.0.5"
+    "typescript-eslint-language-service": "^5.0.5",
+    "vitest": "^2.1.2"
   },
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
   "engines": {
