--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -22,12 +22,13 @@
     "build": "tsc",
     "clean": "rimraf -g \"*.tgz\" \"*.tsbuildinfo\" dist node_modules/.cache",
     "start": "tsc -w",
-    "test": "tsc --noEmit"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@kurone-kito/typescript-config": "^0.16.1",
     "rimraf": "^6.0.1",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "vitest": "^2.1.2"
   },
   "engines": {
     "node": ">=22"
