--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": { "outDir": "dist", "rootDir": "src" },
-  "exclude": ["dist", "node_modules"],
+  "exclude": ["dist", "node_modules", "./**/*.test.mts"],
   "extends": "@kurone-kito/typescript-config/tsconfig.json",
   "include": ["./**/*.mts"]
 }
