--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "exclude": ["dist", "node_modules"],
+  "exclude": ["dist", "node_modules", "./**/*.test.mts"],
   "extends": "@kurone-kito/typescript-config/tsconfig.json",
   "include": ["./**/*.mts"]
 }
