--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@kurone-kito/typescript-config": "^0.16.1",
     "rimraf": "^6.0.1",
+    "type-fest": "^4.26.1",
     "typescript": "~5.6.2",
     "vitest": "^2.1.2"
   },
