--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@kurone-kito/typescript-config": "^0.16.1",
+    "@types/node": "^22.7.4",
+    "google-auth-library": "^9.14.1",
     "rimraf": "^6.0.1",
     "typescript": "~5.6.2",
     "vitest": "^2.1.2"
