--- a/packages/fetcher/tsconfig.json
+++ b/packages/fetcher/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "compilerOptions": { "outDir": "dist", "rootDir": "src" },
+  "compilerOptions": { "outDir": "dist", "rootDir": "src", "types": ["node"] },
   "exclude": ["dist", "node_modules", "./**/*.test.mts"],
   "extends": "@kurone-kito/typescript-config/tsconfig.json",
   "include": ["./**/*.mts"]
