--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "tsconfig.json": "*.tsbuildinfo"
   },
   "files.associations": {
+    "*.css": "tailwindcss",
     ".imgbotconfig": "json",
     "LICENSE": "plaintext"
   },
