--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@kurone-kito/markdownlint-config": "^0.16.1",
     "@kurone-kito/prettier-config": "^0.16.1",
     "@kurone-kito/typescript-config": "^0.16.1",
+    "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.5",
@@ -68,6 +69,7 @@
     "eslint": "^9.12.0",
     "eslint-config-stylelint": "^22.0.0",
     "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "markdownlint-cli2": "^0.14.0",
@@ -76,9 +78,11 @@
     "prettier-plugin-packagejson": "^2.5.2",
     "prettier-plugin-sh": "^0.14.0",
     "prettier-plugin-sort-json": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "rimraf": "^6.0.1",
     "stylelint": "^16.9.0",
     "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "touch": "^3.1.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.8.1",
