--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
+    "*.css": "${capture}.css.*",
     "*.d.mts": "${capture}.d.mts.*, ${capture}.mjs, ${capture}.mjs.*",
+    "*.js": "${capture}.js.*",
     "*.md": "${capture}.*.md",
     "*.mjs": "${capture}.mjs.*",
     ".gitattributes": ".gitignore",
