--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint": "^9.12.0",
     "eslint-config-stylelint": "^22.0.0",
     "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-plugin-solid": "^0.14.3",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
