--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,23 +19,32 @@
   ],
   "scripts": {
     "prebuild": "kb-fetcher > src/data.json",
-    "build": "tsc",
-    "clean": "rimraf -g \"*.tgz\" \"*.tsbuildinfo\" dist node_modules/.cache \"src/*.json\"",
+    "build": "vinxi build",
+    "clean": "rimraf -g \"*.tgz\" \"*.tsbuildinfo\" .output .vinxi node_modules/.cache \"src/*.json\"",
+    "serve": "serve .output/public",
     "prestart": "pnpm run prebuild",
-    "start": "tsc -w",
+    "start": "vinxi dev",
     "test": "vitest run"
   },
   "dependencies": {
-    "@kurone-kito/kit.black-lib": "workspace:^"
+    "@kurone-kito/kit.black-lib": "workspace:^",
+    "@solidjs/start": "^1.0.8",
+    "solid-js": "^1.9.2"
   },
   "devDependencies": {
     "@kurone-kito/kit.black-fetcher": "workspace:^",
     "@kurone-kito/typescript-config": "^0.16.1",
+    "@solidjs/testing-library": "^0.8.10",
+    "@testing-library/jest-dom": "^6.5.0",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
+    "serve": "^14.2.3",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.6.2",
+    "vinxi": "^0.4.3",
+    "vite-plugin-solid": "^2.10.2",
     "vitest": "^2.1.2"
   },
   "engines": {
