--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,11 +19,15 @@
   ],
   "scripts": {
     "prebuild": "kb-fetcher > src/data.json",
-    "build": "vinxi build",
+    "build": "pnpm run \"/^build:.+/\"",
+    "build:storybook": "storybook build",
+    "build:vinxi": "vinxi build",
     "clean": "rimraf -g \"*.tgz\" \"*.tsbuildinfo\" .output .vinxi node_modules/.cache \"src/*.json\"",
     "serve": "serve .output/public",
     "prestart": "pnpm run prebuild",
-    "start": "vinxi dev",
+    "start": "pnpm run -p \"/^start:.+/\"",
+    "start:storybook": "storybook dev -p 6006",
+    "start:vinxi": "vinxi dev",
     "test": "vitest run"
   },
   "dependencies": {
@@ -35,12 +39,21 @@
     "@kurone-kito/kit.black-fetcher": "workspace:^",
     "@kurone-kito/typescript-config": "^0.16.1",
     "@solidjs/testing-library": "^0.8.10",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/blocks": "^8.3.5",
+    "@storybook/docs-tools": "^8.3.5",
+    "@storybook/types": "^8.3.5",
     "@testing-library/jest-dom": "^6.5.0",
     "autoprefixer": "^10.4.20",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
     "serve": "^14.2.3",
+    "storybook": "^8.3.5",
+    "storybook-solidjs": "1.0.0-beta.2",
+    "storybook-solidjs-vite": "1.0.0-beta.2",
     "tailwindcss": "^3.4.13",
     "typescript": "~5.6.2",
     "vinxi": "^0.4.3",
