--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@cspell/cspell-types": "^8.14.4",
+    "@cspell/dict-npm": "^5.1.5",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@kurone-kito/commitlint-config": "^0.16.1",
@@ -59,6 +60,7 @@
     "@kurone-kito/markdownlint-config": "^0.16.1",
     "@kurone-kito/prettier-config": "^0.16.1",
     "@kurone-kito/typescript-config": "^0.16.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
