--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -45,8 +45,10 @@
     "@storybook/blocks": "^8.3.5",
     "@storybook/docs-tools": "^8.3.5",
     "@storybook/types": "^8.3.5",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@testing-library/jest-dom": "^6.5.0",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.12",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
@@ -55,6 +57,7 @@
     "storybook-solidjs": "1.0.0-beta.2",
     "storybook-solidjs-vite": "1.0.0-beta.2",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-safe-area": "^0.6.0",
     "typescript": "~5.6.2",
     "vinxi": "^0.4.3",
     "vite-plugin-solid": "^2.10.2",
