--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -18,5 +18,5 @@
     "*.config.ts"
   ],
   "extends": "@kurone-kito/typescript-config/tsconfig.json",
-  "include": ["./**/*.ts", "./**/*.tsx", "vitest.config.mts"]
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
