--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@kurone-kito/kit.black-lib": "workspace:^",
+    "@solid-primitives/date": "^2.0.23",
     "@solidjs/start": "^1.0.8",
     "solid-js": "^1.9.2"
   },
