--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@kurone-kito/kit.black-lib": "workspace:^",
     "@solid-primitives/date": "^2.0.23",
+    "@solidjs/router": "^0.14.7",
     "@solidjs/start": "^1.0.8",
     "solid-js": "^1.9.2"
   },
