feat(web,root): added the atomic component that the article

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,7 +38,8 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.7",
     "@solidjs/start": "^1.0.8",
-    "solid-js": "^1.9.2"
+    "solid-js": "^1.9.2",
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@kurone-kito/kit.black-fetcher": "workspace:^",
