--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,6 +38,7 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.7",
     "@solidjs/start": "^1.0.8",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.2",
     "tailwind-merge": "^2.5.3"
   },
