--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@kurone-kito/kit.black-lib": "workspace:^",
+    "@kurone-kito/launchpad-icons-solid": "0.6.0-alpha.3",
     "@solid-primitives/date": "^2.0.23",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.7",
