feat(root,web): added the organisms component that the works

--- a/cspell.config.yml
+++ b/cspell.config.yml
@@ -12,10 +12,12 @@ version: '0.2'
 words:
   - amebient
   - cresteaju
+  - graphig
   - momoneko
   - solidjs
   - unstub
   - vgeek
   - vinxi
   - vocaloid
+  - vrcui
   - waivable
