--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -47,6 +47,7 @@ jobs:
       - env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NODE_ENV: production
         name: Deploy to Netlify
         # cspell:disable-next-line
         uses: nwtgck/actions-netlify@v3.0
