--- a/package.json
+++ b/package.json
@@ -51,28 +51,18 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@cspell/cspell-types": "^8.14.4",
     "@cspell/dict-npm": "^5.1.5",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.12.0",
     "@kurone-kito/commitlint-config": "^0.16.1",
     "@kurone-kito/cspell-config": "^0.16.1",
-    "@kurone-kito/eslint-config-base": "^0.16.1",
+    "@kurone-kito/eslint-config-solid": "^0.17.0-alpha.3",
     "@kurone-kito/lint-staged-config": "^0.16.1",
     "@kurone-kito/markdownlint-config": "^0.16.1",
     "@kurone-kito/prettier-config": "^0.16.1",
     "@kurone-kito/typescript-config": "^0.16.1",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@types/eslint-plugin-tailwindcss": "^3.17.0",
-    "@types/eslint__eslintrc": "^2.1.2",
-    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.5",
-    "@typescript-eslint/parser": "^8.8.1",
-    "@typescript-eslint/utils": "^8.8.1",
     "cspell": "^8.14.4",
     "eslint": "^9.12.0",
-    "eslint-config-stylelint": "^22.0.0",
     "eslint-formatter-codeframe": "^7.32.1",
-    "eslint-plugin-solid": "^0.14.3",
-    "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "markdownlint-cli2": "^0.14.0",
@@ -88,7 +78,6 @@
     "stylelint-config-tailwindcss": "^0.0.7",
     "touch": "^3.1.1",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.8.1",
     "typescript-eslint-language-service": "^5.0.5",
     "vitest": "^2.1.2"
   },
