--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,13 +49,18 @@
     "@storybook/addon-interactions": "^8.3.5",
     "@storybook/addon-links": "^8.3.5",
     "@storybook/blocks": "^8.3.5",
+    "@storybook/builder-vite": "^8.3.6",
     "@storybook/docs-tools": "^8.3.5",
     "@storybook/types": "^8.3.5",
     "@tailwindcss/container-queries": "^0.1.1",
     "@testing-library/jest-dom": "^6.5.0",
+    "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-link-attributes": "^3.0.5",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.12",
     "jsdom": "^25.0.1",
+    "markdown-it": "^14.1.0",
+    "markdown-it-link-attributes": "^4.0.1",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
     "serve": "^14.2.3",
@@ -67,6 +72,8 @@
     "type-fest": "^4.26.1",
     "typescript": "~5.6.2",
     "vinxi": "^0.4.3",
+    "vite": "^5.4.10",
+    "vite-plugin-markdown": "^2.2.0",
     "vite-plugin-solid": "^2.10.2",
     "vitest": "^2.1.2"
   },
