--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,8 @@
     "@kurone-kito/launchpad-icons-solid": "0.6.0-alpha.3",
     "@solid-primitives/date": "^2.0.23",
     "@solid-primitives/i18n": "^2.1.1",
+    "@solid-primitives/media": "^2.2.9",
+    "@solid-primitives/storage": "^4.2.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.7",
     "@solidjs/start": "^1.0.8",
