--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -60,6 +60,7 @@
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-link-attributes": "^3.0.5",
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "daisyui": "^4.12.12",
     "jsdom": "^25.0.1",
     "markdown-it": "^14.1.0",
