--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,7 +21,7 @@
     "build:vinxi": "vinxi build",
     "clean": "rimraf -g \"*.tgz\" \"*.tsbuildinfo\" .output .vinxi dist node_modules/.cache \"src/*.json\" storybook-static",
     "prebuild:fetcher": "kb-fetcher > src/data.json",
-    "prebuild:pkl": "pkl eval -f json src/constants.pkl -o src/constants.json",
+    "prebuild:yaml": "js-yaml src/constants.yaml > src/constants.json",
     "serve": "serve dist",
     "prestart": "pnpm run prebuild",
     "start": "pnpm run -p \"/^start:.+/\"",
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@kurone-kito/kit.black-fetcher": "workspace:^",
     "@kurone-kito/typescript-config": "^0.16.1",
-    "@pkl-community/pkl": "0.25.1-2",
     "@solidjs/testing-library": "^0.8.10",
     "@storybook/addon-essentials": "^8.3.5",
     "@storybook/addon-interactions": "^8.3.5",
@@ -63,6 +62,7 @@
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "daisyui": "^4.12.12",
+    "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
     "markdown-it": "^14.1.0",
     "markdown-it-link-attributes": "^4.0.1",
