--- a/package.json
+++ b/package.json
@@ -49,37 +49,37 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@cspell/cspell-types": "^8.14.4",
-    "@cspell/dict-npm": "^5.1.5",
-    "@kurone-kito/commitlint-config": "^0.16.1",
-    "@kurone-kito/cspell-config": "^0.16.1",
+    "@cspell/cspell-types": "^8.15.5",
+    "@cspell/dict-npm": "^5.1.9",
+    "@kurone-kito/commitlint-config": "^0.17.0-alpha.3",
+    "@kurone-kito/cspell-config": "^0.17.0-alpha.3",
     "@kurone-kito/eslint-config-solid": "^0.17.0-alpha.3",
-    "@kurone-kito/lint-staged-config": "^0.16.1",
-    "@kurone-kito/markdownlint-config": "^0.16.1",
-    "@kurone-kito/prettier-config": "^0.16.1",
-    "@kurone-kito/typescript-config": "^0.16.1",
+    "@kurone-kito/lint-staged-config": "^0.17.0-alpha.3",
+    "@kurone-kito/markdownlint-config": "^0.17.0-alpha.3",
+    "@kurone-kito/prettier-config": "^0.17.0-alpha.3",
+    "@kurone-kito/typescript-config": "^0.17.0-alpha.3",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@types/node": "^22.7.5",
-    "cspell": "^8.14.4",
-    "eslint": "^9.12.0",
+    "@types/node": "^22.8.6",
+    "cspell": "^8.15.5",
+    "eslint": "^9.14.0",
     "eslint-formatter-codeframe": "^7.32.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "markdownlint-cli2": "^0.14.0",
-    "oxlint": "^0.9.9",
+    "oxlint": "^0.10.2",
     "prettier": "^3.3.3",
-    "prettier-plugin-packagejson": "^2.5.2",
+    "prettier-plugin-packagejson": "^2.5.3",
     "prettier-plugin-sh": "^0.14.0",
     "prettier-plugin-sort-json": "^4.0.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-tailwindcss": "^0.0.7",
     "touch": "^3.1.1",
-    "typescript": "~5.6.2",
+    "typescript": "~5.6.3",
     "typescript-eslint-language-service": "^5.0.5",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
   "engines": {
