--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -33,13 +33,13 @@
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
-    "@kurone-kito/typescript-config": "^0.16.1",
-    "@types/node": "^22.7.4",
-    "google-auth-library": "^9.14.1",
+    "@kurone-kito/typescript-config": "^0.17.0-alpha.3",
+    "@types/node": "^22.8.6",
+    "google-auth-library": "^9.14.2",
     "rimraf": "^6.0.1",
     "type-fest": "^4.26.1",
-    "typescript": "~5.6.2",
-    "vitest": "^2.1.2"
+    "typescript": "~5.6.3",
+    "vitest": "^2.1.3"
   },
   "engines": {
     "node": ">=22"
