--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -25,11 +25,11 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@kurone-kito/typescript-config": "^0.16.1",
+    "@kurone-kito/typescript-config": "^0.17.0-alpha.3",
     "rimraf": "^6.0.1",
     "type-fest": "^4.26.1",
-    "typescript": "~5.6.2",
-    "vitest": "^2.1.2"
+    "typescript": "~5.6.3",
+    "vitest": "^2.1.3"
   },
   "engines": {
     "node": ">=22"
