--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -37,50 +37,50 @@
     "@solid-primitives/media": "^2.2.9",
     "@solid-primitives/storage": "^4.2.1",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.7",
-    "@solidjs/start": "^1.0.8",
+    "@solidjs/router": "^0.15.0",
+    "@solidjs/start": "^1.0.10",
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.9.2",
-    "tailwind-merge": "^2.5.3",
+    "solid-js": "^1.9.3",
+    "tailwind-merge": "^2.5.4",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@kurone-kito/kit.black-fetcher": "workspace:^",
-    "@kurone-kito/typescript-config": "^0.16.1",
+    "@kurone-kito/typescript-config": "^0.17.0-alpha.3",
     "@solidjs/testing-library": "^0.8.10",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/blocks": "^8.3.5",
-    "@storybook/builder-vite": "^8.3.6",
-    "@storybook/docs-tools": "^8.3.5",
-    "@storybook/types": "^8.3.5",
+    "@storybook/addon-essentials": "^8.4.1",
+    "@storybook/addon-interactions": "^8.4.1",
+    "@storybook/addon-links": "^8.4.1",
+    "@storybook/blocks": "^8.4.1",
+    "@storybook/builder-vite": "^8.4.1",
+    "@storybook/docs-tools": "^8.4.1",
+    "@storybook/types": "^8.4.1",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-link-attributes": "^3.0.5",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
-    "daisyui": "^4.12.12",
+    "daisyui": "^4.12.14",
     "js-yaml": "^4.1.0",
     "jsdom": "^25.0.1",
     "markdown-it": "^14.1.0",
     "markdown-it-link-attributes": "^4.0.1",
     "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
-    "serve": "^14.2.3",
-    "storybook": "^8.3.5",
-    "storybook-solidjs": "1.0.0-beta.2",
-    "storybook-solidjs-vite": "1.0.0-beta.2",
-    "tailwindcss": "^3.4.13",
+    "serve": "^14.2.4",
+    "storybook": "^8.4.1",
+    "storybook-solidjs": "1.0.0-beta.3",
+    "storybook-solidjs-vite": "1.0.0-beta.3",
+    "tailwindcss": "^3.4.14",
     "tailwindcss-safe-area": "^0.6.0",
     "type-fest": "^4.26.1",
-    "typescript": "~5.6.2",
+    "typescript": "~5.6.3",
     "vinxi": "^0.4.3",
     "vite": "^5.4.10",
     "vite-plugin-markdown": "^2.2.0",
     "vite-plugin-solid": "^2.10.2",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "engines": {
     "node": ">=22"
