--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,7 @@
 *.webp binary
 
 .coderabbit.yaml export-ignore
+.git* export-ignore
 .github/** export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
 .husky/** export-ignore
 .imgbotconfig export-ignore
